--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd-img-crop": "^4.23.0",
     "await": "^0.2.6",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
